# cepi-jsonld

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_shape.md
.github/docs/library-reference/: azure-cosmos-reference.md  orjson-reference.md  pyshacl-reference.md  pyyaml-reference.md  rdflib-reference.md
.github/instructions/: cosmos.instructions.md  git-workflow.instructions.md  ontology.instructions.md  python-code.instructions.md  testing.instructions.md  yaml-mapping.instructions.md
.github/prompts/: benchmark.prompt.md  new-phase.prompt.md  new-shape.prompt.md  research-library.prompt.md  run-tests.prompt.md  update-roadmap.prompt.md
.github/workflows/: ci.yml  publish.yml
.hypothesis/constants/: 004e722d2b39195a  00823249c962892a  00a46dda43a031b5  00bb0fe122a140b8  00e8d386e4db9188  010258c38047fd64  014253a76cb29faf  01509ecac4355798  019c31f91edc4f9d  01db491f0ef653b3  0209361969e55011  0301f5452ebd9d9a  031f85f1c11bb00b  033cea2e5cae6cf7  0347e6eababab8af  037adb1c4c5fb9b4  03a0bc33c3be41ac  03ab1e6e6bb21915  03d65cf548ce3b23  041b82baf95116f0  04cf3cdb04981443  04dcbfd8c0cd4d13  051e423d11217435  0524e7a5569e7474  0570a7c52cd987f9  059fb3d372e29ef7  0617e79dc03e4c9d  0628f2618034526e  068c9e16d4886008  06b8985431d126bb  071183ce03e18623  0733152a6baeba53  0736e2d4acddd01a  073b42c0057219c3  07475514dc0bbadb  075db89765c0e9a3  07c71595abf1c54f  0820755dd9e595fa  08291e0e367e6989  082b145676f78dbc  (+1110 more)
ResearchFiles/: FEATURE1_AI_MAPPING_WIZARD_RESEARCH.md  FEATURE4_SYNTHETIC_DATA_RESEARCH.md  FEATURE7_NATIVE_ADAPTERS_RESEARCH.md  PERFORMANCE_REPORT.md  benchmark_approaches.py  benchmark_direct_scale.py  benchmark_parallel.py  benchmark_parallel_v2.py  csv_to_jsonld.py  person_compacted.json  person_direct.json  person_test.json  profile_bottleneck.py  verify_output.py
docs/: adding-a-shape.rst  cli.rst  conf.py  cosmos-setup.rst  getting-started.rst  index.rst  journey-timeline.md
docs/adr/: adr-001-direct-dict-construction.rst  adr-002-yaml-mapping-config.rst  adr-003-orjson-serialization.rst  adr-004-one-container-per-shape.rst  adr-005-optional-shacl-validation.rst  index.rst
docs/api/: adapters.rst  builder.rst  cli.rst  cosmos.rst  exceptions.rst  introspector.rst  mapping.rst  pipeline.rst  registry.rst  serializer.rst  validator.rst
src/ceds_jsonld/: __init__.py  builder.py  cli.py  exceptions.py  introspector.py  logging.py  mapping.py  pipeline.py  registry.py  sanitize.py  serializer.py  transforms.py  validator.py
src/ceds_jsonld/adapters/: __init__.py  api_adapter.py  base.py  bigquery_adapter.py  canvas_adapter.py  csv_adapter.py  database_adapter.py  databricks_adapter.py  dict_adapter.py  excel_adapter.py  google_sheets_adapter.py  ndjson_adapter.py  oneroster_adapter.py  sis_factories.py  snowflake_adapter.py
src/ceds_jsonld/cosmos/: __init__.py  loader.py  prepare.py
src/ceds_jsonld/ontologies/base/: Common.ttl  Common_context.json  Person_Extension_Ontology.ttl  ceds_context.json
src/ceds_jsonld/ontologies/person/: Person_SHACL.ttl  person_context.json  person_example.json  person_mapping.yaml  person_sample.csv
tests/: conftest.py  test_adapters.py  test_builder.py  test_cli.py  test_cosmos.py  test_coverage_gaps.py  test_golden_file.py  test_introspector.py  test_issue_16_transform_precision.py  test_issue_17_18_adapter_edge_cases.py  test_issue_19_20_pipeline_dlq.py  test_issue_21_validate_double_count.py  test_issue_22_ensure_scalar_inf_bool.py  test_issue_23_typed_literal_none.py  test_issue_24_empty_list_indexerror.py  test_issue_25_serializer_nan.py  test_issue_26_to_30_pipe_transform_bugs.py  test_issue_31_34_uri_handling.py  test_issue_32_33_35_bugs.py  test_issue_36_40_adapter_validation.py  test_issue_37_38_39_adapter_bugs.py  test_mapping.py  test_native_adapters.py  test_phase7_production.py  test_pipeline.py  test_property_based.py  test_registry.py  test_serializer.py  test_transforms.py  test_validator.py
tests/benchmarks/: test_performance.py
