[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceds-jsonld"
version = "0.10.2"
description = "Python library for ingesting education data, mapping to CEDS/CEPI ontology SHACL shapes, and outputting conformant JSON-LD"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "CEPI" },
]
keywords = [
    "ceds",
    "json-ld",
    "education",
    "ontology",
    "shacl",
    "rdf",
    "linked-data",
    "data-transformation",
    "cosmos-db",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "rdflib>=7.0",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/daimare9/ceds-jsonld"
Documentation = "https://github.com/daimare9/ceds-jsonld#readme"
Repository = "https://github.com/daimare9/ceds-jsonld"
Changelog = "https://github.com/daimare9/ceds-jsonld/blob/main/CHANGELOG.md"
Issues = "https://github.com/daimare9/ceds-jsonld/issues"

[project.optional-dependencies]
fast = ["orjson>=3.10"]
excel = ["openpyxl>=3.1"]
cosmos = ["azure-cosmos>=4.7", "azure-identity>=1.15"]
validation = ["pyshacl>=0.26"]
api = ["httpx>=0.27"]
database = ["sqlalchemy>=2.0"]
sheets = ["gspread>=6.0"]
canvas = ["canvasapi>=3.0"]
oneroster = ["httpx>=0.27"]
snowflake = ["snowflake-connector-python>=3.0"]
bigquery = ["google-cloud-bigquery>=3.0"]
databricks = ["databricks-sql-connector>=3.0"]
sis = ["canvasapi>=3.0", "httpx>=0.27"]
warehouse = [
    "snowflake-connector-python>=3.0",
    "google-cloud-bigquery>=3.0",
    "databricks-sql-connector>=3.0",
]
all-adapters = [
    "openpyxl>=3.1",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "gspread>=6.0",
    "canvasapi>=3.0",
    "snowflake-connector-python>=3.0",
    "google-cloud-bigquery>=3.0",
    "databricks-sql-connector>=3.0",
]
cli = ["click>=8.1"]
observability = ["structlog>=24.0", "tqdm>=4.60"]
all = [
    "orjson>=3.10",
    "openpyxl>=3.1",
    "azure-cosmos>=4.7",
    "azure-identity>=1.15",
    "pyshacl>=0.26",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "click>=8.1",
    "structlog>=24.0",
    "tqdm>=4.60",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpserver>=1.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "orjson>=3.10",
    "pyshacl>=0.26",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "tqdm>=4.60",
    "azure-cosmos>=4.7",
    "azure-identity>=1.15",
    "click>=8.1",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.scripts]
ceds-jsonld = "ceds_jsonld.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as performance benchmarks",
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "SIM105",   # contextlib.suppress — try/except/pass is often clearer
    "SIM108",   # ternary — if/else is often more readable
    "A002",     # builtin shadowing — `format` param is fine
    "E741",     # ambiguous variable name — `l` in list comp is common
    "N806",     # CamelCase variable in function — MockLoader, SH are fine in tests
    "N817",     # CamelCase imported as acronym — PBV alias is fine in tests
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "openpyxl",
    "openpyxl.*",
    "yaml",
    "yaml.*",
    "pyshacl",
    "pyshacl.*",
    "structlog",
    "structlog.*",
    "azure.*",
    "tqdm",
    "tqdm.*",
    "gspread",
    "gspread.*",
    "canvasapi",
    "canvasapi.*",
    "snowflake.*",
    "google.cloud.*",
    "google.oauth2.*",
    "databricks.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/ceds_jsonld"]

[tool.coverage.run]
source = ["src/ceds_jsonld"]
omit = ["tests/*"]
